--- a/src/app/stills/stills.component.scss
+++ b/src/app/stills/stills.component.scss
@@ -1,6 +1,6 @@
 div#maincont {
   h2 {
-    font-size: 5rem;
+    font-size: 3rem;
     font-weight: bold;
     margin-left: 20%;
   }
@@ -25,33 +25,29 @@ div#maincont {
     float: left;
     display: flex;
     flex-direction: column;
-    margin: 2rem;
     height: 50vh;
     justify-content: space-between;
     position: fixed;
-    transform: translatey(-50%);
+    transform: translatey(-70%);
 
     a {
       color: #fff;
-      padding: .8rem 1rem;
+      padding: .8rem .8rem;
       writing-mode: vertical-lr;
       text-orientation: upright;
-      font-weight: 100;
+      font-weight: bold;
       font-size: .875rem;
 
       &:hover {
         cursor: pointer;
       }
     }
-
   }
   .twoimg {
     padding-left: 20%;
     margin-bottom: 5rem;
     height: 110vh;
-    clear: both;
-    display: flex;
-    justify-content: space-between;
+    display: flexbox;
 
     .one {
       background-image: url("/assets/images/IMG_9562-101.jpg");
@@ -59,8 +55,14 @@ div#maincont {
       background-position: center;
       border-radius: 10px;
       height: 50vh;
-      width: 40%;
-      align-self: flex-start;
+      width: 100%;
+      margin-bottom: 5rem;
+
+      >p {
+        position: absolute;
+        bottom: 10;
+        left: 10;
+      }
     }
 
     .two {
@@ -69,14 +71,19 @@ div#maincont {
       background-position: center;
       border-radius: 10px;
       height: 50vh;
-      width: 40%;
-      align-self: flex-end;
+      width: 100%;
+
+      >p {
+        position: absolute;
+        bottom: 10;
+        left: 10;
+      }
     }
   }
   .firstimg {
       background-image: url("/assets/images/IMG_5879-1616.jpg");
       height: 80vh;
-      width: 80%;
+      width: 100%;
       background-size: cover;
       border-radius: 10px;
       background-repeat: no-repeat;
@@ -94,9 +101,7 @@ div#maincont {
     padding-left: 20%;
     margin-bottom: 5rem;
     height: 110vh;
-    clear: both;
-    display: flex;
-    justify-content: space-between;
+    display: flexbox;
 
       .four {
         background-image: url("/assets/images/TheEssenceofSomeone\(80f9\).jpg");
@@ -104,8 +109,14 @@ div#maincont {
         background-position: center;
         border-radius: 10px;
         height: 50vh;
-        width: 40%;
-        align-self: flex-start;
+        width: 100%;
+        margin-bottom: 5rem; 
+
+        >p {
+          position: absolute;
+          bottom: 10;
+          left: 10;
+        }
       } 
       .five {
         background-image: url("/assets/images/ella.jpg");
@@ -113,8 +124,13 @@ div#maincont {
         background-origin: center;
         border-radius: 10px;
         height: 50vh;
-        width: 40%;
-        align-self: flex-end;
+        width: 100%;
+
+        >p {
+          position: absolute;
+          bottom: 10;
+          left: 10;
+        }
       }
   }
   .lastimg {
@@ -133,4 +149,66 @@ div#maincont {
       left: 10;
     }
   }
+}
+
+/* Media Quires Begin Here */
+
+@media (min-width: 768px) {
+  div#maincont {
+    h2 {
+      font-size: 5rem;
+    }
+  
+    div.sidenav {
+      margin: 2rem;
+      height: 50vh;
+      transform: translatey(-50%);
+  
+      a {
+        padding: .8rem 1rem;
+        font-size: .875rem;
+      }
+    }
+    .twoimg {
+      clear: both;
+      display: flex;
+      justify-content: space-between;
+  
+      .one {
+        background-image: url("/assets/images/IMG_9562-101.jpg");
+        width: 40%;
+        align-self: flex-start;
+      }
+  
+      .two {
+        background-image: url("/assets/images/IMG_9552-303.jpg");
+        width: 40%;
+        align-self: flex-end;
+      }
+    }
+    .firstimg {
+        background-image: url("/assets/images/IMG_5879-1616.jpg");
+        width: 80%;
+    }
+    div.twoimgs2 {
+      height: 110vh;
+      clear: both;
+      display: flex;
+      justify-content: space-between;
+  
+        .four {
+          background-image: url("/assets/images/TheEssenceofSomeone\(80f9\).jpg");
+          width: 40%;
+          align-self: flex-start;
+        } 
+        .five {
+          background-image: url("/assets/images/ella.jpg");
+          width: 40%;
+          align-self: flex-end;
+        }
+    }
+    .lastimg {
+      background-image: url("/assets/images/IMG_5899-101.jpg");
+    }
+}
 }
